--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -1203,7 +1203,7 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 
 Folgende Szenarien werden vom Galaxus Plugin unterstützt:
 
-*_Wichtig:_* Szenarien, ausser Storno-Anfragen, können für Ganz/Teil -Auftrag ausgeführt werden. Deshalb, um doppelten Inhalt zu minimieren, haben wir Szenarien wo der ganze Auftrag bearbeitet wird nicht mehr beschrieben.
+*_Wichtig:_* Alle Szenarien ausser Storno-Anfragen können für komplette und für Teilaufträe ausgeführt werden. Um doppelte Inhalte zu minimieren werden deshalb Szenarien, in denen der ganze Auftrag bearbeitet wird, nicht separat beschrieben.
 
 === Importierter Auftrag ist versandbereit
 
