ADD information about customisable texts area

--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -6,7 +6,7 @@
 :manual:
 
 ////
-zuletzt bearbeitet 27.05.2022
+zuletzt bearbeitet 26.07.2022
 ////
 
 //ToDo - search for and fix comments
@@ -511,6 +511,39 @@ include::partial$meta-beschreibung.adoc[]
 include::partial$meta-keywords.adoc[]
 
 |===
+
+//denk ausserdem dran, die Einstellung Sprache zu löschen
+
+[.collapseBox]
+.*Praxisbeispiel: Ein- oder mehrsprachige Ansicht erstellen*
+--
+
+Standardmäßig ist dies eine zweisprachige Ansicht mit Deutsch und Englisch.
+Aber während du xref:artikel:detailansicht.adoc#[die Ansicht gestaltest], kannst du entscheiden, welche Sprachen du benötigst und in welcher Reihenfolge sie angezeigt werden sollen.
+Beispielsweise könntest du eine einsprachige Ansicht erstellen.
+Oder du könntest andere Sprachen wählen und somit eine individuelle Übersetzungsansicht einrichten.
+
+. Füge das Element *Übersetzung Panel* so oft wie nötig hinzu.
+. Öffne die Einstellungen des Portlets (icon:pencil[role="blue"]).
+. Klicke auf icon:gear[role="darkGrey"] *Sprachen konfigurieren*.
+. Welche Sprachen sollen zusammen angezeigt werden?
+Wähle eine oder mehrere Sprachen aus (icon:check-square[role="blue"]).
+. Welche Sprache soll als erste, zweite, dritte usw. angezeigt werden?
+.. Bewege deinen Mauszeiger über eine Sprache mit dem Symbol material:drag_indicator[role="darkGrey"]. +
+→ Dein Mauszeiger ändert seine Form (icon:arrows[role="darkGrey"]).
+.. Ziehe die Sprache an die gewünschte Stelle.
+. *Speichere* (terra:save[role="darkGrey"]) die Ansicht.
+
+image::artikel:texte-multilinguale-ansicht.gif[]
+
+TIP: Stell dir vor, deine Produkttexte werden vom Deutschen ins Englische, Französische, Spanische und Italienische übersetzt.
+Die Ansicht wäre ziemlich überladen, wenn du alle Sprachen zusammen anzeigen würdest.
+Wähle stattdessen nur das erste Sprachpaar aus, z.B. Deutsch und Englisch.
+Füge dann das Übersetzungspanel ein zweites Mal hinzu und wähle das nächste Sprachpaar, z.B. Deutsch und Französisch.
+Wiederhole den Vorgang so oft wie nötig.
+Die Übersetzungspanels werden untereinander angezeigt und können bei Bedarf ein- und ausgeklappt werden (icon:chevron-down[role="darkGrey"]).
+
+--
 
 [#60]
 === Einstellungen
