reorder filters / add new includes / add ToDos

--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -213,9 +213,33 @@ include::partial$zahlungsdatum.adoc[]
 
 include::partial$filter-einleitung.adoc[]
 
-// Mandant
+// Abo Artikel endet am
 
-include::partial$mandant.adoc[]
+include:partial$subscription-item-ended-at.adoc[]
+
+// TODO: Vergleichsoperatoren
+
+// Abo Artikel startet am
+
+include:partial$subscription-item-started-at.adoc[]
+
+// TODO: Vergleichsoperatoren
+
+// Abo endet am
+
+include:partial$subscription-ended-at.adoc[]
+
+// TODO: Vergleichsoperatoren
+
+// Abo startet am
+
+include:partial$subscription-started-at.adoc[]
+
+// TODO: Vergleichsoperatoren
+
+// Amazon-Konto
+
+include::partial$amazon-konto.adoc[]
 
 [.collapseBox]
 .Vergleichsoperatoren für diesen Filter
@@ -223,10 +247,10 @@ include::partial$mandant.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Mandanten (icon:check-square[role="blue"])
+:filter: ausgewählten Amazon-Konten (icon:check-square[role="blue"])
 :kommas:
 
-[[table-key-figures-operators-client]]
+[[table-key-figures-operators-amazon-account]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
@@ -235,6 +259,35 @@ include::partial$entspricht-einem-dieser-werte.adoc[]
 
 include::partial$entspricht-keinem-dieser-werte.adoc[]
 
+|====
+
+--
+
+// Artikel-ID
+
+include::partial$artikel-id.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einer
+:keinem-keiner: keiner
+:filter: eingegebenen Artikel-IDs
+:kommas:
+
+[[table-key-figures-operators-itemid]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
 |====
 
 --
@@ -280,30 +333,39 @@ include::partial$liegt-zwischen.adoc[]
 
 --
 
-// Auftragstyp
+// Auftragsherkunft Plugin
 
-include::partial$auftragstyp.adoc[]
+include::partial$order-referrer-plugin.adoc[]
+
+//TODO: Vergleichsoperatoren
+
+// Auftragsherkunft Plugin (Auswahl)
+
+include::partial$order-referrer-plugin-selection.adoc[]
+
+// TODO: Vergleichsoperatoren
+
+// Auftragspositionstyp
+
+include::partial$auftragspositionstyp.adoc[]
 
 [.collapseBox]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Auftragstypen (icon:check-square[role="blue"])
+:keinem-keiner: keinem
 :unbestimmter-Artikel: einem
-:filter: ausgewählten Auftragstypen (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragspositionstypen (icon:check-square[role="blue"])
 :kommas:
 
-[[table-key-figures-operators-ordertype]]
+[[table-key-figures-operators-orderitemtype]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
 
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
+include::partial$entspricht-keinem-dieser-werte.adoc[]
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
-
 |====
 
 --
@@ -349,21 +411,20 @@ include::partial$liegt-zwischen.adoc[]
 
 --
 
-// Typ der Auftragseigenschaft
+// Auftragstyp
 
-include::partial$typ-der-auftragseigenschaft.adoc[]
+include::partial$auftragstyp.adoc[]
 
 [.collapseBox]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Typen (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Auftragstypen (icon:check-square[role="blue"])
 :unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Typen (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragstypen (icon:check-square[role="blue"])
 :kommas:
 
-[[table-key-figures-operators-order-property-type]]
+[[table-key-figures-operators-ordertype]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
@@ -374,280 +435,38 @@ include::partial$ist-nicht-gleich.adoc[]
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
 |====
 
 --
 
-// Wert der Auftragseigenschaft
+// Bezahlt am
 
-include::partial$wert-der-auftragseigenschaft.adoc[]
+include::partial$bezahlt-am.adoc[]
 
 [.collapseBox]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: eingegebenen Werte
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: eingegebenen Werten
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
 :kommas:
 
-[[table-key-figures-operators-order-property-value]]
+[[table-key-figures-operators-paid-at]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
-include::partial$ist-nicht-gleich.adoc[]
+include::partial$liegt-zwischen.adoc[]
 
-include::partial$entspricht-einem-dieser-werte.adoc[]
+include::partial$groesser-als-oder-gleich.adoc[]
 
-include::partial$entspricht-keinem-dieser-werte.adoc[]
+include::partial$kleiner-als-oder-gleich.adoc[]
 
-|====
+include::partial$groesser-als.adoc[]
 
---
-
-// Artikel-ID
-
-include::partial$artikel-id.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:unbestimmter-Artikel: einer
-:keinem-keiner: keiner
-:filter: eingegebenen Artikel-IDs
-:kommas:
-
-[[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-|====
-
---
-
-// Auftragspositionstyp
-
-include::partial$auftragspositionstyp.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:keinem-keiner: keinem
-:unbestimmter-Artikel: einem
-:filter: ausgewählten Auftragspositionstypen (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-|====
-
---
-
-// Erlöskonto
-
-include::partial$erloeskonto.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: eingegebenen Erlöskonten
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: eingegebenen Erlöskonten
-:kommas:
-
-[[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-|====
-
---
-
-// Rechnungsland
-
-include::partial$rechnungsland.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-|====
-
---
-
-// Lieferland
-
-include::partial$lieferland.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: ausgewählten Lieferländern (icon:check-square[role="blue"])
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Lieferländern (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-|====
-
---
-
-// Warenausgang gebucht
-
-include::partial$warenausgang-gebucht.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-|====
-
---
-
-// Zahlungsstatus
-
-include::partial$zahlungsstatus.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-|====
-
---
-
-// Lager
-
-include::partial$lager.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Lager (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-|====
-
---
-
-// Amazon-Konto
-
-include::partial$amazon-konto.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Amazon-Konten (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
+include::partial$kleiner-als.adoc[]
 
 |====
 
@@ -679,28 +498,32 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 
 --
 
-// Versandprofil
+// Erlöskonto
 
-include::partial$versandprofil.adoc[]
+include::partial$erloeskonto.adoc[]
 
 [.collapseBox]
 .Vergleichsoperatoren für diesen Filter
 --
 
+:filter-endung: eingegebenen Erlöskonten
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Versandprofile (icon:check-square[role="blue"])
+:filter: eingegebenen Erlöskonten
 :kommas:
 
-[[table-key-figures-operators-shipping-profile]]
+[[table-key-figures-operators-revenue-account]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
 
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
 include::partial$entspricht-keinem-dieser-werte.adoc[]
-
 |====
 
 --
@@ -740,102 +563,17 @@ include::partial$kleiner-als.adoc[]
 
 --
 
-// Bezahlt am
+// Existiert ein kostenpflichtiger Abo Artikel der früher startete
 
-include::partial$bezahlt-am.adoc[]
+include::partial$exists-paid-subscription-item-earlier-start.adoc[]
 
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
+// Existiert ein noch nicht beendeter kostenpflichtiger Abo Artikel
 
-:filter-endung: gewählten Terminen
-:filter: gewählten Termine
-:kommas:
+include::partial$exists-paid-subscription-item-not-ended.adoc[]
 
-[[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
+// Existiert kostenpflichtiger Abo Artikel
 
-include::partial$ist-gleich.adoc[]
-
-include::partial$liegt-zwischen.adoc[]
-
-include::partial$groesser-als-oder-gleich.adoc[]
-
-include::partial$kleiner-als-oder-gleich.adoc[]
-
-include::partial$groesser-als.adoc[]
-
-include::partial$kleiner-als.adoc[]
-
-|====
-
---
-
-// Warenausgangsdatum
-
-include::partial$warenausgangsdatum.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: gewählten Terminen
-:filter: gewählten Termine
-:kommas:
-
-[[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$liegt-zwischen.adoc[]
-
-include::partial$groesser-als-oder-gleich.adoc[]
-
-include::partial$kleiner-als-oder-gleich.adoc[]
-
-include::partial$groesser-als.adoc[]
-
-include::partial$kleiner-als.adoc[]
-
-|====
-
---
-
-// Zahlungsart
-
-include::partial$zahlungsart.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:filter-endung: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
-:unbestimmter-Artikel: einer
-:keinem-keiner: keiner
-:filter: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-|====
-
---
+include::partial$exists-paid-subscription-item.adoc[]
 
 // Hersteller
 
@@ -852,37 +590,6 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Zeichen | Erklärung
-
-include::partial$entspricht-einem-dieser-werte.adoc[]
-
-include::partial$entspricht-keinem-dieser-werte.adoc[]
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-|====
-
---
-
-// Retourengrund
-
-include::partial$retourengrund.adoc[]
-
-[.collapseBox]
-.Vergleichsoperatoren für diesen Filter
---
-
-:unbestimmter-Artikel: einem
-:keinem-keiner: keinem
-:filter: ausgewählten Retourengründe (icon:check-square[role="blue"])
-:filter-endung: ausgewählten Retourengründen (icon:check-square[role="blue"])
-:kommas:
-
-[[table-key-figures-operators-returnreason]]
 [cols="1,1,3"]
 |====
 | Vergleichsoperator | Zeichen | Erklärung
@@ -928,3 +635,355 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 
 --
 
+// Lager
+
+include::partial$lager.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Lager (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-warehouse]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Lieferland
+
+include::partial$lieferland.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Lieferländern (icon:check-square[role="blue"])
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Lieferländern (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-delivery-countries]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Mandant
+
+include::partial$mandant.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Mandanten (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-client]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Rechnungsland
+
+include::partial$rechnungsland.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-invoice-countries]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Retourengrund
+
+include::partial$retourengrund.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Retourengründe (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Retourengründen (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-returnreason]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+|====
+
+--
+
+// Typ der Auftragseigenschaft
+
+include::partial$typ-der-auftragseigenschaft.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Typen (icon:check-square[role="blue"])
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Typen (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-order-property-type]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Varianten-ID
+
+include::partial$varianten-ID.adoc[]
+
+//TODO: Vergleichsoperatoren
+
+// Versanddienstleister
+
+include::partial$shipping-provider.adoc[]
+
+//TODO: Vergleichsoperatoren
+
+// Versandprofil
+
+include::partial$versandprofil.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Versandprofile (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-shipping-profile]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Warenausgang gebucht
+
+include::partial$warenausgang-gebucht.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-outgoing-items-booked]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+|====
+
+--
+
+// Warenausgangsdatum
+
+include::partial$warenausgangsdatum.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
+:kommas:
+
+[[table-key-figures-operators-items-booked-at]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$liegt-zwischen.adoc[]
+
+include::partial$groesser-als-oder-gleich.adoc[]
+
+include::partial$kleiner-als-oder-gleich.adoc[]
+
+include::partial$groesser-als.adoc[]
+
+include::partial$kleiner-als.adoc[]
+
+|====
+
+--
+
+// Wert der Auftragseigenschaft
+
+include::partial$wert-der-auftragseigenschaft.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: eingegebenen Werte
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: eingegebenen Werten
+:kommas:
+
+[[table-key-figures-operators-order-property-value]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
+
+// Zahlungsart
+
+include::partial$zahlungsart.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
+:unbestimmter-Artikel: einer
+:keinem-keiner: keiner
+:filter: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-payment-method]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+|====
+
+--
+
+// Zahlungsstatus
+
+include::partial$zahlungsstatus.adoc[]
+
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
+:kommas:
+
+[[table-key-figures-operators-payment-status]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+|====
+
+--
