--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -217,25 +217,133 @@ include::partial$filter-einleitung.adoc[]
 
 include:partial$subscription-item-ended-at.adoc[]
 
-// TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
+:kommas:
+
+[[table-key-figures-operators-subscription-item-ended-at]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$liegt-zwischen.adoc[]
+
+include::partial$groesser-als-oder-gleich.adoc[]
+
+include::partial$kleiner-als-oder-gleich.adoc[]
+
+include::partial$groesser-als.adoc[]
+
+include::partial$kleiner-als.adoc[]
+
+|====
+
+--
 
 // Abo Artikel startet am
 
 include:partial$subscription-item-started-at.adoc[]
 
-// TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
+:kommas:
+
+[[table-key-figures-operators-subscription-item-started-at]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$liegt-zwischen.adoc[]
+
+include::partial$groesser-als-oder-gleich.adoc[]
+
+include::partial$kleiner-als-oder-gleich.adoc[]
+
+include::partial$groesser-als.adoc[]
+
+include::partial$kleiner-als.adoc[]
+
+|====
+
+--
 
 // Abo endet am
 
 include:partial$subscription-ended-at.adoc[]
 
-// TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
+:kommas:
+
+[[table-key-figures-operators-subscription-ended-at]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$liegt-zwischen.adoc[]
+
+include::partial$groesser-als-oder-gleich.adoc[]
+
+include::partial$kleiner-als-oder-gleich.adoc[]
+
+include::partial$groesser-als.adoc[]
+
+include::partial$kleiner-als.adoc[]
+
+|====
+
+--
 
 // Abo startet am
 
 include:partial$subscription-started-at.adoc[]
 
-// TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: gewählten Terminen
+:filter: gewählten Termine
+:kommas:
+
+[[table-key-figures-operators-subscription-started-at]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$liegt-zwischen.adoc[]
+
+include::partial$groesser-als-oder-gleich.adoc[]
+
+include::partial$kleiner-als-oder-gleich.adoc[]
+
+include::partial$groesser-als.adoc[]
+
+include::partial$kleiner-als.adoc[]
+
+|====
+
+--
 
 // Amazon-Konto
 
@@ -247,7 +355,7 @@ include::partial$amazon-konto.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Amazon-Konten (icon:check-square[role="blue"])
+:filter: ausgewählten Amazon-Konten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-amazon-account]]
@@ -300,10 +408,10 @@ include::partial$auftragsherkunft.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Auftragsherkünften (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Auftragsherkünften (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einer
 :keinem-keiner: keiner
-:filter: ausgewählten Auftragsherkünfte (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragsherkünfte (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-order-referrer]]
@@ -337,13 +445,61 @@ include::partial$liegt-zwischen.adoc[]
 
 include::partial$order-referrer-plugin.adoc[]
 
-//TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Plugins
+:unbestimmter-Artikel: einer
+:keinem-keiner: keiner
+:filter: ausgewählten Plugins
+:kommas:
+
+[[table-key-figures-operators-order-referrer-plugin]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
 
 // Auftragsherkunft Plugin (Auswahl)
 
 include::partial$order-referrer-plugin-selection.adoc[]
 
-// TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:filter-endung: ausgewählten Plugins (material:check_box[role=skyBlue])
+:unbestimmter-Artikel: einer
+:keinem-keiner: keiner
+:filter: ausgewählten Plugins (material:check_box[role=skyBlue])
+:kommas:
+
+[[table-key-figures-operators-order-referrer-plugin-selection]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+|====
+
+--
 
 // Auftragspositionstyp
 
@@ -355,7 +511,7 @@ include::partial$auftragspositionstyp.adoc[]
 
 :keinem-keiner: keinem
 :unbestimmter-Artikel: einem
-:filter: ausgewählten Auftragspositionstypen (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragspositionstypen (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-orderitemtype]]
@@ -378,10 +534,10 @@ include::partial$auftragsstatus.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Auftragsstatus (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Auftragsstatus (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Auftragsstatus (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragsstatus (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-orderstatus]]
@@ -419,9 +575,9 @@ include::partial$auftragstyp.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Auftragstypen (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Auftragstypen (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einem
-:filter: ausgewählten Auftragstypen (icon:check-square[role="blue"])
+:filter: ausgewählten Auftragstypen (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
@@ -482,7 +638,7 @@ include::partial$ebay-konto.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten eBay-Konten (icon:check-square[role="blue"])
+:filter: ausgewählten eBay-Konten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-ebay-account]]
@@ -585,8 +741,8 @@ include::partial$hersteller.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Hersteller (icon:check-square[role="blue"])
-:filter-endung: ausgewählten Herstellern (icon:check-square[role="blue"])
+:filter: ausgewählten Hersteller (material:check_box[role=skyBlue])
+:filter-endung: ausgewählten Herstellern (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-producer]]
@@ -645,7 +801,7 @@ include::partial$lager.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Lager (icon:check-square[role="blue"])
+:filter: ausgewählten Lager (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-warehouse]]
@@ -669,10 +825,10 @@ include::partial$lieferland.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Lieferländern (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Lieferländern (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Lieferländern (icon:check-square[role="blue"])
+:filter: ausgewählten Lieferländern (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-delivery-countries]]
@@ -702,7 +858,7 @@ include::partial$mandant.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Mandanten (icon:check-square[role="blue"])
+:filter: ausgewählten Mandanten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-client]]
@@ -726,10 +882,10 @@ include::partial$rechnungsland.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Rechnungsländern (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Rechnungsländern (icon:check-square[role="blue"])
+:filter: ausgewählten Rechnungsländern (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-invoice-countries]]
@@ -759,8 +915,8 @@ include::partial$retourengrund.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Retourengründe (icon:check-square[role="blue"])
-:filter-endung: ausgewählten Retourengründen (icon:check-square[role="blue"])
+:filter: ausgewählten Retourengründe (material:check_box[role=skyBlue])
+:filter-endung: ausgewählten Retourengründen (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-returnreason]]
@@ -788,10 +944,10 @@ include::partial$typ-der-auftragseigenschaft.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Typen (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Typen (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Typen (icon:check-square[role="blue"])
+:filter: ausgewählten Typen (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-order-property-type]]
@@ -815,13 +971,52 @@ include::partial$entspricht-keinem-dieser-werte.adoc[]
 
 include::partial$varianten-ID.adoc[]
 
-//TODO: Vergleichsoperatoren
+[.collapseBox]
+.Verfügbare Vergleichsoperatoren
+--
+
+[[table-key-figures-operators-variation-id]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Operator | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
 
 // Versanddienstleister
 
 include::partial$shipping-provider.adoc[]
 
-//TODO: Vergleichsoperatoren
+[.collapseBox]
+.Vergleichsoperatoren für diesen Filter
+--
+
+:unbestimmter-Artikel: einem
+:keinem-keiner: keinem
+:filter: ausgewählten Versanddienstleister (material:check_box[role=skyBlue])
+:kommas:
+
+[[table-key-figures-operators-shipping-provider]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Zeichen | Erklärung
+
+include::partial$entspricht-einem-dieser-werte.adoc[]
+
+include::partial$entspricht-keinem-dieser-werte.adoc[]
+
+|====
+
+--
 
 // Versandprofil
 
@@ -833,7 +1028,7 @@ include::partial$versandprofil.adoc[]
 
 :unbestimmter-Artikel: einem
 :keinem-keiner: keinem
-:filter: ausgewählten Versandprofile (icon:check-square[role="blue"])
+:filter: ausgewählten Versandprofile (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-shipping-profile]]
@@ -857,7 +1052,7 @@ include::partial$warenausgang-gebucht.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Werten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
@@ -943,10 +1138,10 @@ include::partial$zahlungsart.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Zahlungsarten (material:check_box[role=skyBlue])
 :unbestimmter-Artikel: einer
 :keinem-keiner: keiner
-:filter: ausgewählten Zahlungsarten (icon:check-square[role="blue"])
+:filter: ausgewählten Zahlungsarten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-payment-method]]
@@ -974,7 +1169,7 @@ include::partial$zahlungsstatus.adoc[]
 .Vergleichsoperatoren für diesen Filter
 --
 
-:filter-endung: ausgewählten Werten (icon:check-square[role="blue"])
+:filter-endung: ausgewählten Werten (material:check_box[role=skyBlue])
 :kommas:
 
 [[table-key-figures-operators-payment-status]]
