galaxus update - EN

--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -1184,7 +1184,7 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 
 * Galaxus Retoure-Anfragen generieren neue plentymarkets Aufträge vom Typ *Retoure*. Diese Aufträge werden mit dem Initial-Auftrag verknüpft. Die resultierenden Aufträge müssen separat bearbeitet werden.
 
-* Das Standard-Lieferdatum für Galaxus-Aufträge trägst du im Galaxus Backend im Menü *Auftrag » Übersicht » Artikel » Bearbeiten » Lieferdatum* ein. Wenn dort kein Lieferdatum gespeichert ist, wird das Lieferdatum so berechnet: +
+* Das Lieferdatum gibst im Menü *Auftrag » Übersicht » Artikel » Bearbeiten » Lieferdatum* ein. Wenn dort kein Lieferdatum gespeichert ist, wird das Lieferdatum so berechnet: +
 [Tag, an dem die Ereignisaktion *Auftragsbestätigung an Galaxus senden* ausgelöst wurde] + 2 Arbeitstage
 
 * Ein Versanddatum wird außerdem nicht gesetzt, wenn die zur Auftragserfüllung benötigte Warenmenge nicht als Netto-Warenbestand vorhanden ist. Das geplante Lieferdatum kann aufgrund der Plugin-Option *Positive Bestände sollen immer exportiert werden...* im Menü *Einrichtung » Märkte » Galaxus » Product Stock Price Tab*  weiteren Änderungen unterliegen.
@@ -1192,7 +1192,7 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 * In allen Szenarien, in denen nur ein Teil der Bestellung weiterbearbeitet werden soll, muss die importierte Bestellung aufgeteilt werden. Die resultierenden Aufträge müssen separat bearbeitet werden.
 
 * So teilst du einen Auftrag:
-  . Öffne das Menü *Auftrag » Auftrags-ID*.
+  . Öffne das Menü *Auftrag » [Auftrag öffnen]*.
   . Teile den Auftrag unter *Auftrag » Übersicht » Zahnrad » (Teilen)*. +
   → Das Fenster *Auftrag teilen* wird geöffnet.
   . Wähle die Artikelmengen für den neuen Auftrag. +
@@ -1204,7 +1204,7 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 
 Folgende Szenarien werden vom Galaxus Plugin unterstützt.
 
-*_Wichtig:_* Ausser Storno-Anfragen können alle Szenarien für komplette und für Teilaufträe ausgeführt werden. Um doppelte Inhalte zu minimieren werden deshalb Szenarien, in denen der ganze Auftrag bearbeitet wird, nicht separat beschrieben.
+*_Wichtig:_* Ausser Storno-Anfragen können alle Szenarien für komplette und für Teilaufträge ausgeführt werden. Um doppelte Inhalte zu minimieren werden deshalb Szenarien, in denen der ganze Auftrag bearbeitet wird, nicht separat beschrieben.
 
 === Importierter Auftrag ist versandbereit
 
@@ -1217,8 +1217,8 @@ Der importierte Auftrag enthält alle erforderlichen Angaben und ist versandbere
 
 Nur ein Teil des importierten Auftrags kann zu diesem Zeitpunkt erfüllt werden. Die Kund:in erklärt sich damit einverstanden, die Hälfte der Bestellung jetzt zu erhalten. Die andere Hälfte wird zu einem späteren Zeitpunkt versendet:
 
-. Öffne das Menü *Auftrag » [Auftrags-ID]*.
-. Klick auf *Auftrag teilen*.
+. Öffne das Menü *Auftrag » [Auftrag öffnen]*.
+. Klick auf *Teilen*.
 . Wenn der nächste Liefertermin mit der Kund:in vereinbart wurde, gehe zu *[Neuer Auftrag] » Übersicht » Artikel » Bearbeiten » Lieferdatum*.
 . Gib das Lieferdatum ein.
 . Speichere die Einstellungen.
@@ -1229,7 +1229,7 @@ Nur ein Teil des importierten Auftrags kann zu diesem Zeitpunkt erfüllt werden.
 
 Du hast festgestellt, dass ein Teil des Auftrags nicht erfüllt werden kann, zum Beispiel weil der Artikel keinen Bestand hat.
 
-. Öffne das Menü *Auftrag » [Auftrags-ID]*.
+. Öffne das Menü *Auftrag » [Auftrag öffnen]*.
 . Klick auf *Teilen*.
 . Löse die Ereignisaktion *Auftragsbestätigung an Galaxus senden* aus.
 . Löse die Ereignisaktion *'Händler-storniert' an Galaxus melden* aus.
