--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -371,7 +371,7 @@ Futterstoff zuordnen und an der Variante speichern:
 . Für die Variante passenden Eigenschaftswert wählen.
 
 | UVP
-| . Verkaufspreis des Preistyps *UVP* mit den Varianten verknüpfen.
+| . Den Verkaufspreis des Preistyps *UVP* für die Herkunft *{market}* mit den Varianten verknüpfen.
 . Preis speichern.
 
 *_Für die Angabe des UVP gilt die folgende Regel:_*
@@ -379,7 +379,7 @@ Futterstoff zuordnen und an der Variante speichern:
 * Der UVP darf nicht niedriger sein als der Brutto-Verkaufspreis.
 
 | Bruttoverkaufspreis
-| . Verkaufspreis ohne Preistyp mit den Varianten verknüpfen. +
+| . Den Verkaufspreis für die Herkunft *{market}* mit den Varianten verknüpfen. +
 . Preis speichern.
 
 | Kategorie
