--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -77,6 +77,47 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 include::partial$verkaufspreis-festlegen.adoc[]
 
+[#volume-discount]
+=== _Optional:_ Staffelpreise festlegen
+
+Du möchtest günstigere Preise anbieten, wenn Kund:innen mehrere Exemplare desselben Artikels kaufen? Dann lege zusätzlich zum Verkaufspreis auch Staffelpreise fest. Einen Verkaufspreis definierst du als Staffelpreise, indem du für die Verkaufspreis-Einstellung *Ab Menge* eine Zahl größer 1 eingibst.
+
+Staffelpreise müssen also die folgenden Einstellungen haben:
+
+* *Herkunft* Völkner und Mirakl
+* *Ab Menge* größer 1
+
+Beim Speichern der Preise an der Variante musst du Folgendes beachten:
+
+* Je höher die Einstellung *Ab Menge*, desto niedriger der Preis
+
+[[table-volume-discount]]
+.Beispiel für eine Preisstaffelung
+[cols="2,3a,3"]
+|===
+|Ab |Verkaufspreis-Einstellungen |Preis an Variante
+
+| 1 Stück
+| *Ab Menge:* 1 +
+*Herkunft:* *Mirakl* und *Völkner*
+| 9,99 EUR
+
+| 3 Stück
+| *Ab Menge:* 3 +
+*Herkunft:* *Mirakl* und *Völkner*
+| 9,69 EUR
+
+| 6 Stück
+| * *Ab Menge:* 6 +
+*Herkunft:* *Mirakl* und *Völkner*
+| 9,39 EUR
+
+| 9 Stück
+| * *Ab Menge:* 9 +
+*Herkunft:* *Mirakl* und *Völkner*
+| 9,09 EUR
+|===
+
 [#eigenschaften-erstellen]
 == Eigenschaften erstellen
 
