--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -98,23 +98,23 @@ Beim Speichern der Preise an der Variante musst du Folgendes beachten:
 |Ab |Verkaufspreis-Einstellungen |Preis an Variante
 
 | 1 Stück
-| *Ab Menge:* 1 +
-*Herkunft:* *Mirakl* und *Völkner*
+| * *Ab Menge:* 1
+* *Herkunft:* *Mirakl* und *Völkner*
 | 9,99 EUR
 
 | 3 Stück
-| *Ab Menge:* 3 +
-*Herkunft:* *Mirakl* und *Völkner*
+| * *Ab Menge:* 3
+* *Herkunft:* *Mirakl* und *Völkner*
 | 9,69 EUR
 
 | 6 Stück
-| * *Ab Menge:* 6 +
-*Herkunft:* *Mirakl* und *Völkner*
+| * *Ab Menge:* 6
+* *Herkunft:* *Mirakl* und *Völkner*
 | 9,39 EUR
 
 | 9 Stück
-| * *Ab Menge:* 9 +
-*Herkunft:* *Mirakl* und *Völkner*
+| * *Ab Menge:* 9
+* *Herkunft:* *Mirakl* und *Völkner*
 | 9,09 EUR
 |===
 
