ADD more work to the new item ui pages

--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -5,32 +5,29 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 01.03.2022
+zuletzt bearbeitet 27.07.2022
 ////
 
 //ToDo - info about adding notes h1, h2, colour
 
 ////
 -Inheritance logic +
--How/where to do specific actions (copy item, create new item, 3-dots dropdown thing) +
--Multilingual texts logic +
--Link to directory of all data fields +
 ////
 
-Diese Seite beschäftigt sich mit der Artikel-Detailansicht und erläutert das grundsätzliche Bedienkonzept.
+Diese Seite beschäftigt sich mit der Detailansicht eines Produkts und erläutert das grundsätzliche Bedienkonzept.
 Du lernst:
 
-* xref:artikel:detailansicht.adoc#200[die Benutzeroberfläche anzupassen]
+* xref:artikel:detailansicht.adoc#200[die Produktansicht anzupassen]
 * xref:artikel:detailansicht.adoc#1000[wie die Speicherlogik funktioniert]
 
 video::682773880#t=1m57s[vimeo]
 
 [#200]
-== Benutzeroberfläche anpassen
+== Produktansicht anpassen
 
-Wenn du einen xref:artikel:suchen.adoc#100[Artikeldatensatz im plentymarkets Backend öffnest], werden die Artikeldetails im Hauptfenster rechts angezeigt.
-Was aber, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
-Du kannst eine neue Detailansicht erstellen und sie an deine Bedürfnisse anpassen.
+Wenn du einen xref:artikel:suchen.adoc#560[Artikel- oder Variantendatensatz im plentymarkets Backend öffnest], werden die Details im Hauptfenster rechts angezeigt.
+Was aber, wenn du mit der Anordnung der Details nicht zufrieden bist?
+Du kannst eine neue Ansicht erstellen und sie an deine Bedürfnisse anpassen.
 
 [TIP]
 .Hast du Admin-Rechte?
@@ -129,6 +126,8 @@ Ein solches Szenario kann mit eigenen Portlets realisiert werden.
 image::artikel:detailansicht-eigene-portlets.png[]
 //end::own-portlet[]
 
+=== Hinweistexte und Farben einfügen
+
 [#700]
 === Bearbeitung abschließen
 
@@ -208,6 +207,28 @@ xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[Weitere Informatio
 xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#116[Weitere Informationen] zu Benutzerkonten und Zugriffsrechten.
 
 --
+
+== Spezielle Ansichten
+
+=== Eigenschaften
+
+//fast den gleichen Einleitungstext findet sich auch in die Datei verzeichnis - da bei den Eigenschaften Element
+
+Das Eigenschaften-Element kann beliebig oft hinzugefügt werden.
+Eine mögliche Anwendung ist, jeden Eigenschaftstyp als ein eigenes Portlet darzustellen.
+
+include::page$verzeichnis.adoc[tag=properties-type-portlet]
+
+=== Texte
+
+//fast den gleichen Einleitungstext findet sich auch in die Datei verzeichnis - da bei den Text Element
+
+Standardmäßig ist der Textbereich eine zweisprachige Ansicht mit Deutsch und Englisch.
+Du kannst den Bereich jedoch anpassen, wenn du andere Sprachen benötigst oder sie in einer anderen Reihenfolge anzeigen möchtest.
+Beispielsweise könntest du eine einsprachige Ansicht erstellen.
+Oder du könntest andere Sprachen wählen und somit eine individuelle Übersetzungsansicht einrichten.
+
+include::page$verzeichnis.adoc[tag=texts-multilingual-panel]
 
 [#1000]
 == Speicherlogik
